// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed block transforms to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:embed {"url":"https://twitter.com/notnownikki","type":"rich","providerNameSlug":"twitter","responsive":true} -->
<figure class="fin-block-embed is-type-rich is-provider-twitter fin-block-embed-twitter"><div class="fin-block-embed__wrapper">
https://twitter.com/notnownikki
</div></figure>
<!-- /fin:embed --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Embed block transforms to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:embed {"url":"https://twitter.com/notnownikki","type":"rich","providerNameSlug":"twitter","responsive":true} -->
<figure class="fin-block-embed is-type-rich is-provider-twitter fin-block-embed-twitter"><div class="fin-block-embed__wrapper">
https://twitter.com/notnownikki
</div></figure>
<!-- /fin:embed --></div>
<!-- /fin:group -->"
`;
